--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+.particles-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	object-fit: cover;
+	z-index: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.canvas-loader {
+	font-size: 10px;
+	width: 1em;
+	height: 1em;
+	border-radius: 50%;
+	position: relative;
+	text-indent: -9999em;
+	animation: mulShdSpin 1.1s infinite ease;
+	transform: translateZ(0);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes mulShdSpin {
+	0%,
+	100% {
+	  box-shadow: 0em -2.6em 0em 0em #ffffff,
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.5),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7);
+	}
+	12.5% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.7),
+		1.8em -1.8em 0 0em #ffffff, 2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5);
+	}
+	25% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.5),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.7), 2.5em 0em 0 0em #ffffff,
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+	}
+	37.5% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.5),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.7), 1.75em 1.75em 0 0em #ffffff,
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+	}
+	50% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.5),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.7), 0em 2.5em 0 0em #ffffff,
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+	}
+	62.5% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.5),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.7), -1.8em 1.8em 0 0em #ffffff,
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+	}
+	75% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.5),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.7), -2.6em 0em 0 0em #ffffff,
+		-1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2);
+	}
+	87.5% {
+	  box-shadow: 0em -2.6em 0em 0em rgba(255, 255, 255, 0.2),
+		1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2),
+		2.5em 0em 0 0em rgba(255, 255, 255, 0.2),
+		1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2),
+		0em 2.5em 0 0em rgba(255, 255, 255, 0.2),
+		-1.8em 1.8em 0 0em rgba(255, 255, 255, 0.5),
+		-2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
+	}
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
