--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 :root {
     --font-family: "Manrope", sans-serif;
 
-    --bg: #21273F;
+    --bg: #0f121e;
     --card: #364061;
 
     --highlight: #21273F;
@@ -16,9 +16,9 @@
     --gradient-bg: linear-gradient(#364061 1.84%, #20263E 102.67%);
 }
 
-/* body{
+body{
     overflow-x: hidden
-} */
+}
 
 *{
     @apply text-white
@@ -29,7 +29,7 @@ h1, h2, h3{
 }
 
 h1{
-    @apply text-5xl
+    @apply text-3xl md:text-4xl xl:text-5xl
 }
 h3{
     @apply text-2xl
@@ -48,4 +48,8 @@ h4{
 
 .social-icons{
     @apply text-[1.7rem] md:text-3xl
+}
+
+.social-container{
+    @apply bg-[--card] p-3 rounded-lg
 }
