--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,29 @@
     --bg: #0f121e;
     --card: #364061;
 
-    --highlight: #21273F;
+    --highlight: #5B54E0;
     --highlight2: #E85EB8;
     --green: #56C7E7;
 
+    --white:#ffffff;
+
     --gradient-text: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
     --gradient-bg: linear-gradient(#364061 1.84%, #20263E 102.67%);
+    --highlight-gradient-bg:radial-gradient(circle, rgba(91,84,224,0.1) 0%, rgba(15,18,30,1) 35%, rgba(15,18,30,1) 100%);
 }
 
 body{
-    overflow-x: hidden
+    overflow-x: hidden;
+    background:var(--bg);
+}
+
+.home-bg{
+    background: var(--highlight-gradient-bg);
+    background-attachment: fixed;
 }
 
 *{
-    @apply text-white
+    @apply text-[--white]
 }
 
 h1, h2, h3{
