--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,9 @@
     --bg: #0f121e;
     --card: #364061;
 
-    --highlight: #5B54E0;
-    --highlight2: #E85EB8;
+    --highlight: #1AF895;
+    --highlight2: #1AF895;
+    --highlight3: #9A46FE;
     --green: #56C7E7;
 
     --white:#ffffff;
