--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
     --highlight: #1AF895;
     --highlight2: #1AF895;
-    --highlight3: #9A46FE;
+    --highlight: #9A46FE;
     --green: #56C7E7;
 
     --white:#ffffff;
