--- a/src/components/prev/index copy 2.css
+++ b/src/components/prev/index copy 2.css
@@ -38,47 +38,47 @@
 
 body{
     overflow-x: hidden;
-    background:white;
-    color: var(--text);
+    background:var(--bg);
+    color: white;
 }
 
 p,a,h1,h2,h3,h4,h5,h6,span,div, button{
     font-family: "Jura", sans-serif !important;
     font-optical-sizing: auto;
-    font-weight: 600;
+    font-weight: 400;
     font-style: normal;
-    @apply tracking-wide
+    @apply text-[--text]
 }
 
-h1, h2, h3, h4{
+h1, h2, h3{
     font-family: "BioRhyme", serif !important;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
-    @apply tracking-wider uppercase
+    @apply uppercase
 }
 
 h1{
-    @apply text-[8.5vw] md:text-4xl xl:text-4xl font-extrabold leading-[110%] 
+    @apply text-[12.5vw] md:text-6xl xl:text-5xl font-black drop-shadow-[0_7.15px_1.9px_rgba(0,0,0,1)] text-white
 }
 
 h2{
-    @apply text-[7vw] md:text-3xl xl:text-3xl 
+    @apply text-3xl md:text-4xl xl:text-5xl 
 }
 h3{
     @apply text-base md:text-lg uppercase font-medium
 }
 h4{
-    @apply text-base font-semibold
+    @apply text-lg
 }
 p{
-    @apply text-base leading-[115%]
+    @apply text-base
 }
 
 .container{
-    @apply px-5 md:px-[3rem] xl:px-[6rem] max-w-[1240px] mx-auto
+    @apply px-[1rem] md:px-[3rem] xl:px-[6rem] max-w-[1240px] mx-auto
 }
 
 .gp-flex{
@@ -101,14 +101,7 @@ p{
     @apply rounded-lg absolute top-[-5.5px] left-[-6.5px] w-full h-full bg-white border-2 border-[--text]
 }
 .button-1{
-    @apply gap-2 flex items-center justify-center text-white bg-[--text] py-[10px] md:py-[12px] lg:px-4 rounded-lg min-w-[200px] border-2 border-[--text] text-sm md:text-base capitalize
-}
-
-.button-2-pre{
-    @apply rounded-lg absolute top-[-5.5px] left-[-6.5px] w-full h-full bg-[--text] border-2 border-gray-200
-}
-.button-2{
-    @apply gap-2 flex items-center justify-center text-[--text] bg-white py-[10px] md:py-[12px] lg:px-4 rounded-lg min-w-[200px] border-2 border-white text-sm md:text-base capitalize
+    @apply gap-2 flex items-center justify-center text-white bg-[--text] py-[10px] md:py-[12px] lg:px-4 rounded-lg min-w-[200px] border-2 border-[--text] text-sm md:text-base
 }
 
 
