--- a/src/index.css
+++ b/src/index.css
@@ -43,10 +43,16 @@ body{
 }
 
 p,a,h1,h2,h3,h4,h5,h6,span,div, button{
-    font-family: "Jura", sans-serif !important;
+    font-family: "BioRhyme", serif !important;
+    font-optical-sizing: auto;
+    font-weight: 350;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+    /* font-family: "Jura", sans-serif !important;
     font-optical-sizing: auto;
     font-weight: 600;
-    font-style: normal;
+    font-style: normal; */
     @apply tracking-wide
 }
 
@@ -57,11 +63,11 @@ h1, h2, h3, h4{
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
-    @apply tracking-wider uppercase
+    @apply tracking-wider uppercase 
 }
 
 h1{
-    @apply text-[8.5vw] md:text-4xl xl:text-4xl font-extrabold leading-[110%] 
+    @apply text-[8.5vw] md:text-4xl xl:text-4xl font-extrabold
 }
 
 h2{
@@ -74,7 +80,7 @@ h4{
     @apply text-base font-semibold
 }
 p{
-    @apply text-base leading-[115%]
+    @apply text-base
 }
 
 .container{
