--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ h1, h2, h3, h4{
     font-style: normal;
     font-variation-settings:
       "wdth" 100;
-    @apply tracking-wider uppercase 
+    @apply tracking-wider uppercase leading-[110%]
 }
 
 h1{
@@ -77,7 +77,7 @@ h3{
     @apply text-base md:text-lg uppercase font-medium
 }
 h4{
-    @apply text-base font-semibold
+    @apply text-lg md:text-[24px] font-semibold
 }
 p{
     @apply text-base
